--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"  # 基础日志接口，保持兼容性
 tracing = "0.1"  # 现代化的日志/追踪系统
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }  # 配置和格式化
 tracing-log = "0.1"  # 连接log和tracing
+time = { version = "0.3", features = ["formatting"], registry = "ustc" } # 时间格式化，轻量级替代chrono
 
 # SSH库 - 使用vendor目录中的版本，减少网络依赖
 russh = { path = "vendor/russh" }  # 使用vendor目录中的russh 0.52.0
@@ -50,6 +51,7 @@ base64 = "0.21"
 # 项目依赖链中有不同版本的nix: v0.28.0(portable-pty)、v0.29.0(russh-cryptovec)、v0.30.1(根依赖)
 # 目前编译没有问题，三个版本可以共存，后续可考虑向上游提PR统一版本
 nix = { version = "0.30", features = ["process", "signal", "term", "user"] }
+regex = { version = "1.11.1", registry = "ustc" }
 
 [dev-dependencies]
 tokio-test = "0.4"
@@ -60,8 +62,5 @@ tokio-test = "0.4"
 # 3. 使用tracing替代env_logger，提供更强大的日志和追踪能力
 # 4. 保留log接口以兼容现有代码和第三方库
 # 5. 使用tracing-log桥接log和tracing，确保兼容性
-# 6. 将simple_logger移至dev-dependencies，因为它只在示例中使用
-# 7. 为nix添加功能特性以明确依赖需求
-# 8. russh及其相关依赖通过vendor目录管理，避免网络问题
-# 9. 虽然存在多版本nix依赖，但编译和功能测试正常
+# 6. 添加time库用于简单的时间格式化，避免chrono依赖冲突
 
